client:Header:debug: Fix bug with userName add style white-space/overflow/text-overflow

--- a/client/src/components/OrdersList/OrdersList.module.css
+++ b/client/src/components/OrdersList/OrdersList.module.css
@@ -29,7 +29,7 @@
   display: none;
 }
 
-@media (min-width: 581px) and (max-width: 1120px) {
+@media (min-width: 581px) and (max-width: 1250px) {
   .ordersList {
     width: 100%;
   }
