--- a/client/src/pages/CompleteOrderPage/CompleteOrderPage.module.scss
+++ b/client/src/pages/CompleteOrderPage/CompleteOrderPage.module.scss
@@ -29,6 +29,7 @@
     }
   }
   .completeOrderPage__itemsList {
+    width: 72.8rem;
     display: flex;
     flex-direction: column;
     row-gap: $xs-spacing;
