--- a/client/src/pages/shoppingCartPage/ShoppingCartPage.module.css
+++ b/client/src/pages/shoppingCartPage/ShoppingCartPage.module.css
@@ -1,5 +1,5 @@
 .shoppingCartPage {
-  min-height: 100vh;
+  min-height: 76rem;
   padding-inline: 8rem;
   width: 100%;
   display: flex;
@@ -174,6 +174,9 @@
 .shoppingCartPage__fillCartBlock .shoppingCartPage__itemsBlock {
   width: 84.5rem;
   padding-top: 2.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
 }
 
 @media (min-width: 951px) and (max-width: 960px) {
