--- a/client/src/pages/userPage/sideNavigation/OrdersBlock/OrdersBlock.module.css
+++ b/client/src/pages/userPage/sideNavigation/OrdersBlock/OrdersBlock.module.css
@@ -13,7 +13,7 @@
   text-align: start;
 }
 
-@media (min-width: 600px) and (max-width: 1120px) {
+@media (min-width: 600px) and (max-width: 1250px) {
   .ordersBlock .ordersBlock__title {
     display: none;
   }
